<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_name">超级作业本</string>
    <string name="internet_error">网络异常,请检查网络连接</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nicheng">昵称</string>
    <string name="xingming">姓名</string>
    <string name="banjiyanzhengma">班级验证码</string>
    <string name="queren">确认</string>
    <string name="takephoto">拍照上传</string>
    <string name="fromphotostore">从相册选择</string>
    <string name="reg_fanhui">返回</string>
    <string name="class_fabiao_tishi">提个问题或是分享一下你的心得吧。</string>
    <string name="class_fabiao">发表</string>
    <string name="class_button_all">全部</string>
    <string name="class_button_myself">我的</string>
    <string name="lookmore">查看更多</string>
     <string name="huifu">回复</string>
    <string name="guanzhu">关注</string>
    <string name="delete">删除</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新ing\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载ing\u2026</string>
    <string name="question_speak_exit">退出</string>
    <string name="question_speak_start">开始</string>
    <string name="question_speak_over">完成</string>
    <string name="question_speak_next">继续</string>
    <string name="question_speak_tishi">看到橙色的这些词了吗,你的发音还不够标准哦,在来试试吧！</string>
    <string name="newwork_text">new!</string>
    <string name="work_content_text">完成情况:</string>
    <string name="question_dictation_check">检查</string>
    <string name="question_dictation_mes">预听</string>
    <string name="question_dictation_content">\t在开始本次作业前,请先点击上面的波音按钮,进行音频的预听,以便更好的完成本次作业!</string>
    <string name="question_history_tishi">你需要多读的词：</string>
    <string name="edit_null">输入框不能为空！</string>
    <string name="Net_null">未连接网络</string>
    <string name="setting_tishi">点击头像进行修改！</string>
    <string name="saveUpdata">保存更新</string>
    <string name="changeClass">切换班级</string>
    <string name="exit_user">退出用户</string>
    <string name="main_class_oneTv1">磊磊</string>
    <string name="main_class_oneTv2">张小磊</string>
    <string name="main_class_classesTv">七年级二班英语</string>
    <string name="SwitchClass_Tv">切换班级</string>
    <string name="SwitchClass_Et">输入班级验证码加入新班级</string>
    <string name="senderError">发表失败</string>
	<string name="question_speak_tishi_ok">你的发音真的很不错哦,让我们再来读读其它的句子吧！</string>
     <string name="reg_info">登记信息</string>
     
     <string name="set1">版本信息</string>
     <string name="set2">超级作业本 翰文版 v0.5x</string>
     <string name="set3">阳光翰文（北京）国际教育科技中心 发行</string>
     <string name="set4">苏州协创软件技术有限公司 提供技术支持</string>
    
</resources>