<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ede9ea"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/set_touxiang"
            android:layout_width="122px"
            android:layout_height="128px"
            android:layout_marginTop="55px"
            android:background="@drawable/moren" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18px"
            android:text="@string/setting_tishi"

            android:textSize="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:text="@string/nicheng"
            android:textColor="#000000"
            android:textSize="20px" />

        <EditText
            android:id="@+id/set_nickname"
            android:layout_width="320px"
            android:layout_height="50px"
            android:layout_marginTop="12px"
            android:gravity="center"
            android:maxLength="8"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12px"
            android:text="@string/xingming"
            android:textColor="#000000"
            android:textSize="20px" />

        <EditText
            android:id="@+id/set_name"
            android:layout_width="320px"
            android:layout_height="50px"
            android:layout_marginTop="12px"
            android:gravity="center"
            android:maxLength="8"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="20px" />

        <Button
            android:layout_width="320px"
            android:layout_height="42px"
            android:layout_marginTop="49px"
            android:background="#92b81b"
            android:gravity="center"
            android:onClick="saveUpdata"
            android:text="@string/saveUpdata"
            android:textColor="#FFFFFF"
            android:textSize="20px" />

        <Button
            android:layout_width="320px"
            android:layout_height="42px"
            android:layout_marginTop="51px"
            android:background="#92b81b"
            android:gravity="center"
            android:onClick="changeClass"
            android:text="@string/changeClass"
            android:textColor="#FFFFFF"
            android:textSize="20px" />

        <Button
            android:layout_width="320px"
            android:layout_height="42px"
            android:layout_marginTop="22px"
            android:background="#f08629"
            android:gravity="center"
            android:onClick="exit_user"
            android:text="@string/exit_user"
            android:textColor="#FFFFFF"
            android:textSize="20px" />
        
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="330px"
            android:text="@string/set1"
            android:textColor="#000000"
            android:textSize="20px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8px"
            android:text="@string/set2"
            android:textColor="#5E5D5D"
            android:textSize="18px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8px"
            android:text="@string/set3"
            android:textColor="#5E5D5D"
            android:textSize="18px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8px"
            android:text="@string/set4"
            android:textColor="#5E5D5D"
            android:textSize="18px" />
    </LinearLayout>

</RelativeLayout>