<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bj"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140px"
            android:text="@string/reg_info"
            android:textColor="#000000"
            android:textSize="40px" />
        <ImageView
            android:id="@+id/reg_touxiang"
            android:layout_width="122px"
            android:layout_height="128px"
            android:layout_marginTop="150px"
            android:background="@drawable/moren" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46px"
            android:text="@string/nicheng"
            android:textColor="#000000"
            android:textSize="20px" />

        <EditText
            android:id="@+id/reg_nicheng"
            android:layout_width="320px"
            android:layout_height="50px"
            android:layout_marginTop="13px"
            android:gravity="center"
            android:maxLength="8"
            android:textSize="20px" 
           android:maxLines="1"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13px"
            android:text="@string/xingming"
            android:textColor="#000000"
            android:textSize="20px" />

        <EditText
            android:id="@+id/reg_xingming"
            android:layout_width="320px"
            android:layout_height="50px"
            android:layout_marginTop="13px"
            android:gravity="center"
            android:maxLength="8"
            android:textSize="20px"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13px"
            android:text="@string/banjiyanzhengma"
            android:textColor="#000000"
            android:textSize="20px" />

        <EditText
            android:id="@+id/reg_banjiyanzhengma"
            android:layout_width="320px"
            android:layout_height="50px"
            android:layout_marginTop="13px"
            android:gravity="center"
            android:textSize="20px" 
            android:maxLines="1"
            android:singleLine="true"/>

        <Button
            android:layout_width="320px"
            android:layout_height="50px"
            android:layout_marginTop="42px"
            android:background="#FFFF00"
            android:gravity="center"
            android:onClick="reg_queren"
            android:text="@string/queren"
            android:textSize="20px" />
    </LinearLayout>





</RelativeLayout>