<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/question_speak_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/question_title_bg1" >

        <LinearLayout
            android:id="@+id/question_dictation_exit"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/question_speak_exit"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/question_speak_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/question_dictation_next"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:background="@color/juhuang"
            android:gravity="center"
            android:onClick="onclicks"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/question_speak_start"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/right" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/question_dictation_mes"
            android:textColor="@color/question_title_bg1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/question_dictation_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/dictation_laba" />

        <TextView
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/dictation_mes_bg"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/question_dictation_content"
            android:textColor="@color/question_title_bg1"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>