<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/question_speak_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/question_title_bg1" >

        <LinearLayout
            android:id="@+id/question_speak_exit"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:onClick="onclicks"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/question_speak_exit"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/question_speak_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/question_speak_next"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:background="@color/juhuang"
            android:gravity="center"
            android:onClick="onclicks"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/question_speak_next"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/right" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp" >

        <ImageView
            android:id="@+id/question_speak_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:onClick="onclicks"
            android:src="@drawable/jzlb" />

        <com.comdosoft.homework.tools.PredicateLayout
            android:id="@+id/question_speak_content"
            android:layout_width="430dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp">
       </com.comdosoft.homework.tools.PredicateLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/speak"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:onClick="onclicks"
        android:src="@drawable/unmake" />

    <TextView
        android:id="@+id/question_speak_tishi"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:lineSpacingExtra="15dp"
        android:padding="15dp"
        android:textColor="#6E6B6B"
        android:textSize="16sp" />

</LinearLayout>